--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dexOptions {
+        jumboMode true
+    }
 }
 
 dependencies {
@@ -44,4 +47,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.viewpager2:viewpager2:1.1.0-alpha01"
     implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
